[package]
name = "swarmshield"
version = "3.8.0"
edition = "2021"
description = "Research-grade agent-based simulation for emergent social dynamics"
license = "LicenseRef-EINIXSA-Internal-Eval"
license-file = "LICENSE"
repository = "https://github.com/QuantGenAIPhr34kW1z/swarmshield-core"
keywords = ["simulation", "agent-based", "network", "social-dynamics"]
categories = ["simulation", "science"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
petgraph = "0.6"
chrono = { version = "0.4", features = ["clock"] }
rayon = "1.10"
parking_lot = "0.12"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
